src/main/java/com/upwork/donkey/core/parser/antlr/DonkeyParser.java
// Generated from Donkey.g4 by ANTLR 4.6
package com.upwork.donkey.core.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DonkeyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, HTTPMethodArgumentType=16, 
		HTTPMethod=17, PrimitiveType=18, CollectionType=19, StartCurlyBracket=20, 
		EndCurlyBracket=21, Identifier=22, IntConstant=23, Literal=24, LineDoc=25, 
		EmbeddedDoc=26, WS=27, COMMENT=28, LINE_COMMENT=29;
	public static final int
		RULE_document = 0, RULE_definition = 1, RULE_singularTypeReference = 2, 
		RULE_collectionTypeReference = 3, RULE_methodArgumentTypeReference = 4, 
		RULE_namespace = 5, RULE_namespaceImport = 6, RULE_classImport = 7, RULE_language = 8, 
		RULE_namespaceName = 9, RULE_className = 10, RULE_serviceName = 11, RULE_resource = 12, 
		RULE_resourceDefaultUrl = 13, RULE_methodDef = 14, RULE_methodUrl = 15, 
		RULE_methodReturnType = 16, RULE_methodSignature = 17, RULE_methodArgument = 18, 
		RULE_defaultValue = 19, RULE_methodThrows = 20, RULE_resourceDoc = 21, 
		RULE_methodDoc = 22, RULE_methodReturnDoc = 23, RULE_methodArgumentDoc = 24, 
		RULE_exception = 25, RULE_exceptionStatus = 26;
	public static final String[] ruleNames = {
		"document", "definition", "singularTypeReference", "collectionTypeReference", 
		"methodArgumentTypeReference", "namespace", "namespaceImport", "classImport", 
		"language", "namespaceName", "className", "serviceName", "resource", "resourceDefaultUrl", 
		"methodDef", "methodUrl", "methodReturnType", "methodSignature", "methodArgument", 
		"defaultValue", "methodThrows", "resourceDoc", "methodDoc", "methodReturnDoc", 
		"methodArgumentDoc", "exception", "exceptionStatus"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'<'", "'>'", "'namespace'", "'import namespace'", "'import class'", 
		"'serviceName'", "'resource'", "';'", "'void'", "'('", "','", "')'", "'default'", 
		"'throws'", "'exception'", null, null, null, "'list'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "HTTPMethodArgumentType", "HTTPMethod", "PrimitiveType", 
		"CollectionType", "StartCurlyBracket", "EndCurlyBracket", "Identifier", 
		"IntConstant", "Literal", "LineDoc", "EmbeddedDoc", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Donkey.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DonkeyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DonkeyParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__14) | (1L << LineDoc))) != 0)) {
				{
				{
				setState(54);
				definition();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public NamespaceImportContext namespaceImport() {
			return getRuleContext(NamespaceImportContext.class,0);
		}
		public ClassImportContext classImport() {
			return getRuleContext(ClassImportContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public ExceptionContext exception() {
			return getRuleContext(ExceptionContext.class,0);
		}
		public ServiceNameContext serviceName() {
			return getRuleContext(ServiceNameContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				namespace();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				namespaceImport();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				classImport();
				}
				break;
			case T__6:
			case LineDoc:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				resource();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				exception();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				serviceName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingularTypeReferenceContext extends ParserRuleContext {
		public TerminalNode PrimitiveType() { return getToken(DonkeyParser.PrimitiveType, 0); }
		public TerminalNode Identifier() { return getToken(DonkeyParser.Identifier, 0); }
		public SingularTypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singularTypeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterSingularTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitSingularTypeReference(this);
		}
	}

	public final SingularTypeReferenceContext singularTypeReference() throws RecognitionException {
		SingularTypeReferenceContext _localctx = new SingularTypeReferenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_singularTypeReference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==PrimitiveType || _la==Identifier) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CollectionTypeReferenceContext extends ParserRuleContext {
		public TerminalNode CollectionType() { return getToken(DonkeyParser.CollectionType, 0); }
		public SingularTypeReferenceContext singularTypeReference() {
			return getRuleContext(SingularTypeReferenceContext.class,0);
		}
		public CollectionTypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collectionTypeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterCollectionTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitCollectionTypeReference(this);
		}
	}

	public final CollectionTypeReferenceContext collectionTypeReference() throws RecognitionException {
		CollectionTypeReferenceContext _localctx = new CollectionTypeReferenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_collectionTypeReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(CollectionType);
			setState(73);
			match(T__0);
			setState(74);
			singularTypeReference();
			setState(75);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodArgumentTypeReferenceContext extends ParserRuleContext {
		public SingularTypeReferenceContext singularTypeReference() {
			return getRuleContext(SingularTypeReferenceContext.class,0);
		}
		public CollectionTypeReferenceContext collectionTypeReference() {
			return getRuleContext(CollectionTypeReferenceContext.class,0);
		}
		public MethodArgumentTypeReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodArgumentTypeReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterMethodArgumentTypeReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitMethodArgumentTypeReference(this);
		}
	}

	public final MethodArgumentTypeReferenceContext methodArgumentTypeReference() throws RecognitionException {
		MethodArgumentTypeReferenceContext _localctx = new MethodArgumentTypeReferenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodArgumentTypeReference);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PrimitiveType:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				singularTypeReference();
				}
				break;
			case CollectionType:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				collectionTypeReference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public LanguageContext language() {
			return getRuleContext(LanguageContext.class,0);
		}
		public NamespaceNameContext namespaceName() {
			return getRuleContext(NamespaceNameContext.class,0);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitNamespace(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__2);
			setState(82);
			language();
			setState(83);
			namespaceName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceImportContext extends ParserRuleContext {
		public LanguageContext language() {
			return getRuleContext(LanguageContext.class,0);
		}
		public NamespaceNameContext namespaceName() {
			return getRuleContext(NamespaceNameContext.class,0);
		}
		public NamespaceImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterNamespaceImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitNamespaceImport(this);
		}
	}

	public final NamespaceImportContext namespaceImport() throws RecognitionException {
		NamespaceImportContext _localctx = new NamespaceImportContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_namespaceImport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__3);
			setState(86);
			language();
			setState(87);
			namespaceName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassImportContext extends ParserRuleContext {
		public LanguageContext language() {
			return getRuleContext(LanguageContext.class,0);
		}
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public ClassImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterClassImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitClassImport(this);
		}
	}

	public final ClassImportContext classImport() throws RecognitionException {
		ClassImportContext _localctx = new ClassImportContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classImport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__4);
			setState(90);
			language();
			setState(91);
			className();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LanguageContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DonkeyParser.Identifier, 0); }
		public LanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_language; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterLanguage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitLanguage(this);
		}
	}

	public final LanguageContext language() throws RecognitionException {
		LanguageContext _localctx = new LanguageContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_language);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DonkeyParser.Identifier, 0); }
		public NamespaceNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterNamespaceName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitNamespaceName(this);
		}
	}

	public final NamespaceNameContext namespaceName() throws RecognitionException {
		NamespaceNameContext _localctx = new NamespaceNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_namespaceName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DonkeyParser.Identifier, 0); }
		public ClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_className; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterClassName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitClassName(this);
		}
	}

	public final ClassNameContext className() throws RecognitionException {
		ClassNameContext _localctx = new ClassNameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_className);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceNameContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DonkeyParser.Identifier, 0); }
		public ServiceNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serviceName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterServiceName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitServiceName(this);
		}
	}

	public final ServiceNameContext serviceName() throws RecognitionException {
		ServiceNameContext _localctx = new ServiceNameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_serviceName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__5);
			setState(100);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DonkeyParser.Identifier, 0); }
		public TerminalNode StartCurlyBracket() { return getToken(DonkeyParser.StartCurlyBracket, 0); }
		public TerminalNode EndCurlyBracket() { return getToken(DonkeyParser.EndCurlyBracket, 0); }
		public ResourceDocContext resourceDoc() {
			return getRuleContext(ResourceDocContext.class,0);
		}
		public ResourceDefaultUrlContext resourceDefaultUrl() {
			return getRuleContext(ResourceDefaultUrlContext.class,0);
		}
		public List<MethodDefContext> methodDef() {
			return getRuleContexts(MethodDefContext.class);
		}
		public MethodDefContext methodDef(int i) {
			return getRuleContext(MethodDefContext.class,i);
		}
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterResource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitResource(this);
		}
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_resource);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LineDoc) {
				{
				setState(102);
				resourceDoc();
				}
			}

			setState(105);
			match(T__6);
			setState(106);
			match(Identifier);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Literal) {
				{
				setState(107);
				resourceDefaultUrl();
				}
			}

			setState(110);
			match(StartCurlyBracket);
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				methodDef();
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==HTTPMethod || _la==LineDoc );
			setState(116);
			match(EndCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceDefaultUrlContext extends ParserRuleContext {
		public TerminalNode Literal() { return getToken(DonkeyParser.Literal, 0); }
		public ResourceDefaultUrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceDefaultUrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterResourceDefaultUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitResourceDefaultUrl(this);
		}
	}

	public final ResourceDefaultUrlContext resourceDefaultUrl() throws RecognitionException {
		ResourceDefaultUrlContext _localctx = new ResourceDefaultUrlContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_resourceDefaultUrl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(Literal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDefContext extends ParserRuleContext {
		public TerminalNode HTTPMethod() { return getToken(DonkeyParser.HTTPMethod, 0); }
		public MethodReturnTypeContext methodReturnType() {
			return getRuleContext(MethodReturnTypeContext.class,0);
		}
		public MethodSignatureContext methodSignature() {
			return getRuleContext(MethodSignatureContext.class,0);
		}
		public MethodDocContext methodDoc() {
			return getRuleContext(MethodDocContext.class,0);
		}
		public MethodUrlContext methodUrl() {
			return getRuleContext(MethodUrlContext.class,0);
		}
		public MethodThrowsContext methodThrows() {
			return getRuleContext(MethodThrowsContext.class,0);
		}
		public MethodReturnDocContext methodReturnDoc() {
			return getRuleContext(MethodReturnDocContext.class,0);
		}
		public MethodDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterMethodDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitMethodDef(this);
		}
	}

	public final MethodDefContext methodDef() throws RecognitionException {
		MethodDefContext _localctx = new MethodDefContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_methodDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LineDoc) {
				{
				setState(120);
				methodDoc();
				}
			}

			setState(123);
			match(HTTPMethod);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Literal) {
				{
				setState(124);
				methodUrl();
				}
			}

			setState(127);
			methodReturnType();
			setState(128);
			methodSignature();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(129);
				methodThrows();
				}
			}

			setState(132);
			match(T__7);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EmbeddedDoc) {
				{
				setState(133);
				methodReturnDoc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodUrlContext extends ParserRuleContext {
		public TerminalNode Literal() { return getToken(DonkeyParser.Literal, 0); }
		public MethodUrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodUrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterMethodUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitMethodUrl(this);
		}
	}

	public final MethodUrlContext methodUrl() throws RecognitionException {
		MethodUrlContext _localctx = new MethodUrlContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_methodUrl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(Literal);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodReturnTypeContext extends ParserRuleContext {
		public SingularTypeReferenceContext singularTypeReference() {
			return getRuleContext(SingularTypeReferenceContext.class,0);
		}
		public MethodReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodReturnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).enterMethodReturnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonkeyListener ) ((DonkeyListener)listener).exitMethodReturnType(this);
		}
	}
